# DeadCommunity

./: .gitignore  Algorithm.cpp  Algorithm.h  BoundedThres.cpp  BoundedThres.h  CMakeLists.txt  Common.cpp  Common.h  CompareGreedy.cpp  CompareGreedy.h  Constant.cpp  Constant.h  DCRgenerator.cpp  DCRgenerator.h  DCRgraph.cpp  DCRgraph.h  EIG.cpp  EIG.h  GIA.cpp  GIA.h  Graph.cpp  Graph.h  GreedySolution.cpp  GreedySolution.h  HighBenefit.cpp  HighBenefit.h  HighDegree.cpp  HighDegree.h  HighInfluence.cpp  HighInfluence.h  HighTouch.cpp  HighTouch.h  HyperGraph.cpp  HyperGraph.h  SSA.cpp  SSA.h  SandwichSolution.cpp  SandwichSolution.h  SocialGraph.cpp  SocialGraph.h  (+7 more)
DSSA/: .gitignore  CMakeLists.txt  DSSA  DSSA.cpp  el2bin  gen.sh
ldf/: Makefile  clustering.cpp  clustering.h  common.h  football.adj  gen.sh  graph.adj  graph.cs  karate.adj  ldf  ldf.cpp  modularity.hpp  s838.adj  tmp1.adj  wikie.adj
ldf/graph/: DynGraph.hpp  EdgeList.hpp  Makefile  Timer.h  config.hpp  edgeMap.hpp  generalGraph.hpp  graphAlgorithm.hpp  igraphConversion.hpp  lemonConversion.hpp  main.cpp  mappedHeap.hpp  unweightedGraph.hpp  unweightedGraphTest.h
results/: epinions.bin_result_ucs_.csv  facebook.bin_result_ucs_.csv  facebookE.txt_result_scalable_freeThres_changePop_unweighted_isMM.csv  facebookE.txt_result_scalable_freeThres_changePop_unweighted_isMM.txt  wiki.bin_result_ucs_.csv  wikiE.txt_result_scalable_freeThres_changePop_unweighted_isMM.txt
